crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_185_CNROM_Lock_Mighty_Bomb_Jack_J_PRG0_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-185-CNROM-Lock/Mighty Bomb Jack (J) (PRG0) [!].zip
rom_sha256=53c98864f63d251f44e2e1c308115a19cac691ddf1fc254d76db94cf5514eaab
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=5695122672a80803
checkpoint f900 fb_fnv1a64=ca5235c954ce1a24
checkpoint f1100 fb_fnv1a64=c9300b6d4cdc2995
