crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_185_CNROM_Lock_Seicross_J_PRG1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-185-CNROM-Lock/Seicross (J) (PRG1) [!].nes
rom_sha256=07d5810c0fcda3b99603a4651cd9c918cf5dc2efaf090b846d4ca955cdf452d4
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=194e4ae21f823ece
checkpoint f900 fb_fnv1a64=6671dff5459ef968
checkpoint f1100 fb_fnv1a64=c1de499467bc08e5
