crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_189_TXC_MMC3_Mario_Fighter_III_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-189-TXC-MMC3/Mario Fighter III (Unl) [!].zip
rom_sha256=55d27912a9e338ac9210088a34a74db6fffbfb7664387881d592de394290a20c
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=e582c9b94bba7ed9
checkpoint f900 fb_fnv1a64=5f02ef56b0753aed
checkpoint f1100 fb_fnv1a64=17d8b8daccffbec2
